<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">PlantKeeper</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="add_new_plant">Add new plant</string>
    <string name="edit_the_plant">Edit the plant</string>
    <string name="empty_db_text">@string/add_new_plant</string>

    <string name="added">Added</string>
    <string name="changed">Changed</string>
    <string name="deleted">Deleted</string>
    <string name="delete_item">delete</string>
    <string name="save">save</string>
    <string name="notes">Notes</string>
    <string name="label_select_picture">Choose image</string>
    <string name="toast_cannot_retrieve_selected_image">Can`t load chosen image</string>

    <string name="file_provider_authorities" translatable="false">com.goranatos.plantkeeper.provider</string>
    <string name="download">Download</string>
    <string name="to_water">To water</string>
    <string name="watered_dialog_plant_info">watered</string>
    <string name="fertilized_dialog_plant_info">fertilized</string>
    <string name="to_fertilize">To fertilize</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="delete_plant_from_db">Delete plant?</string>
    <string name="are_you_sure_to_delete_the_plant_from_db">Are you sure to delete the plant?</string>
    <string name="cancel">Cancel</string>

    <string name="notification_title">Notification</string>
    <string name="notification_snooze_60_min">Snooze 60 minute</string>

    <string name="plants_notification_description" translatable="false">plants notification</string>

    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="alarm_notification_time">Alarm notification time</string>
    <string name="alarm_notification_time_summary">Alarm will appear at</string>

    <!--    contextual menu-->
    <string name="contextual_action_edit">Edit</string>
    <string name="contextual_action_delete">Delete</string>

    <!--    MaterialDatePicker-->
    <string name="mtrl_picker_range_header_unselected" tools:override="true">Choose date</string>
    <string name="mtrl_picker_range_header_only_start_selected" tools:override="true">%s - End date</string>
    <string name="mtrl_picker_range_header_only_end_selected" tools:override="true">Start date - %s</string>
    <string name="mtrl_picker_text_input_date_range_start_hint" tools:override="true">Start date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint" tools:override="true">Start date</string>
    <string name="mtrl_picker_text_input_date_format" tools:override="true">MM.dd.yyyy</string>
    <string name="mtrl_picker_out_of_range" tools:override="true">You are out of range: %1$s</string>
    <string name="mtrl_picker_invalid_format" tools:override="true">Wrong input.\\Use: %1$s</string>
    <string name="mtrl_picker_save" tools:override="true">Save</string>
    <string name="mtrl_picker_date_header_title" tools:override="true">Choose date</string>
    <string name="mtrl_picker_date_header_unselected" tools:override="true">Chosen date</string>
    <string name="mtrl_picker_text_input_date_hint" tools:override="true">Date</string>
    <string name="mtrl_picker_text_input_year_abbr" tools:override="true">y</string>
    <string name="mtrl_picker_text_input_month_abbr" tools:override="true">m</string>
    <string name="mtrl_picker_text_input_day_abbr" tools:override="true">d</string>
    <string name="mtrl_picker_invalid_range" tools:override="true">Invalid range.</string>
    <string name="mtrl_picker_invalid_format_use" tools:override="true">Format: %1$s</string>
    <string name="mtrl_picker_invalid_format_example" tools:override="true">Example: %1$s</string>
    <string name="mtrl_picker_confirm" description="Button text to indicate that the widget will save the user's selection [CHAR_LIMIT=16]">Ok</string>
    <string name="mtrl_picker_cancel" description="Button text to indicate that the widget will ignore the user's selection [CHAR_LIMIT=16]">Cancel</string>

    <string name="plant_notification_channel_id" translatable="false">plant_notification</string>
    <string name="plant_notification_channel_name" translatable="false">plant_notification_channel</string>

    <string name="days_till_event">%1$sd</string>
    <string name="days_till_watering">&#160;Till watering:</string>
    <string name="days_till_fertilizing">&#160;Till fertilizing:</string>
    <string name="notification_plants_need_care">Your plants need care of!</string>
    <string name="plant_s_name">Plant`s name</string>
    <string name="hibernate_mode">Hibernate mode</string>
    <string name="dec_20">Dec, 20</string>
    <string name="hibernate_mode_settings">Hibernate mode settings</string>
    <string name="begin">Begin</string>
    <string name="_01_10" translatable="false">01.10</string>
    <string name="end">End</string>
    <string name="_01_04" translatable="false">01.04</string>
    <string name="fertilizing_mode_settings">Fertilizing mode settings</string>
    <string name="sp_hibernate_mode">hibernate mode</string>
    <string name="next_fertilization_date">Next fertilizing</string>
    <string name="to_fertilize_once_at_in_days">To fertilize once a (days)</string>
    <string name="fertilizing_settings_normal_mode">Normal mode:</string>
    <string name="fertilizing_settings_hibernate_mode">Hibernate mode:</string>
    <string name="watering_mode_settings">Watering settings</string>
    <string name="next_watering">Next watering</string>
    <string name="to_water_once_at_in_days">To water once a  (days):</string>
    <string name="watering_settings_normal_mode">Normal mode:</string>
    <string name="watering_settings_hibernate_mode">Hibernate mode:</string>
    <string name="_3_days" translatable="false">3d</string>
    <string name="_2_days" translatable="false">2d</string>
    <string name="my_plants">My plants</string>
    <string name="settings">Settings</string>
    <string name="settings_feedback">Feedback</string>
    <string name="google_plat_application_page" translatable="false">market://details?id=com.goranatos.plantkeeper</string>
    <string name="about_application">About application</string>
    <string name="watering_mode">watering_mode</string>
    <string name="help">Help</string>
    <string name="settings_feedback_summary">Report technical issues or suggest new features</string>
    <string name="application_language">Application language</string>
    <string name="settings_language_russian">Russian</string>
    <string name="choose_application_language">Choose application language</string>

    <string name="pref_option_choose_language" translatable="false">pref_option_choose_language</string>
    <string name="pref_option_is_list_home_adapter" translatable="false">pref_option_is_list_home_adapter</string>

    <string name="ru" translatable="false">ru</string>
    <string name="en" translatable="false">en</string>
    <string name="es" translatable="false">es</string>
    <string name="empty_string" translatable="false" />
    <string name="russian_lang">Russian</string>
    <string name="english_lang">English</string>
    <string name="spanish_lang">Spanish</string>
    <string name="current_lang">English</string>

    <string name="pref_option_is_to_show_notifications" translatable="false">pref_option_is_to_show_notifications</string>
    <string name="pref_option_notification_time" translatable="false">pref_option_notification_time</string>
    <string name="pref_option_settings_feedback" translatable="false">pref_option_settings_feedback</string>
    <string name="pref_option_is_dark_theme_enabled" translatable="false">pref_option_is_dark_theme_enabled</string>

    <string name="to_change_app_lang_restart_application">To change application`s lang restart your application</string>
    <string name="settings_night_mode">Application theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_default">Default</string>

    <string name="theme_light" translatable="false">Light</string>
    <string name="theme_dark" translatable="false">Dark</string>
    <string name="theme_default" translatable="false">Default</string>
    <string name="enable_dark_theme">Enable dark theme</string>

    <string name="whitespace" translatable="false">&#160;</string>
    <string name="application_settings">Application settings</string>

    <string name="start_with_space_string" translatable="false">&#160; %1$s</string>
    <string name="new_plant">New plant</string>
    <string name="no_plants_in_db">No plants</string>
    <string name="action_change_appearance">Change appearance</string>
    <string name="today_tasks_completed">Today\'s tasks have been completed.</string>
    <string name="to_do_menu">To-do</string>
    <string name="my_plants_menu">My plants</string>
    <string name="today_title">Today</string>
    <string name="tomorrow_title">Tomorrow</string>
    <string name="week_title">Week</string>
    <string name="to_do_list">To-do list</string>

    <string name="slide_1_title"> About the app </string>
    <string name="slide_1_desc"> PlantKeeper will help you organize the proper care of your flowers and plants. </string>

    <string name="slide_2_title"> Configure care and notification options </string>
    <string name="slide_2_desc"> * Regularity of watering, \n * Regularity of fertilization, \n * Other parameters </string>

    <string name="slide_3_title"> And enjoy your plants growing! </string>
    <string name="slide_3_desc"> Try it! </string>

    <string name="about"> Intro </string>
    <string name="first_start_info">"  <![CDATA[ Click on the <b>+</b> and add new plants to your collection. <br /> <br /> Go to <b>Settings</b>, turn on and select a right time for notifications. <br />  <br />That's all!    ]]>"</string>
    <string name="str_continue"> Continue </string>
    <string name="no_plants_need_care_of">No plants need care of.</string>
    <string name="help_item">Help</string>
</resources>