<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/delete_item_from_db"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="100"
        android:title="@string/delete_item"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/badgeInfo"
        android:icon="@drawable/ic_baseline_help_24"
        android:orderInCategory="100"
        android:title="@string/help_item"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/save_plant_to_db"
        android:icon="@drawable/ic_baseline_check_24"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always|withText" />

</menu>