<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_my_plants">
    <fragment
        android:id="@+id/navigation_my_plants"
        android:name="com.goranatos.plantkeeper.ui.myplants.MyPlantsFragment"
        android:label="@string/my_plants"
        tools:layout="@layout/fragment_my_plants">
        <action
            android:id="@+id/action_myPlantsFragment_to_plantAddAndInfo"
            app:destination="@id/plantAddAndInfo"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_myPlantsFragment_to_settingsFragment"
            app:destination="@id/settings"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_my_plants_to_todoFragment"
            app:destination="@id/navigation_todo" />
    </fragment>

    <fragment
        android:id="@+id/plantAddAndInfo"
        android:name="com.goranatos.plantkeeper.ui.addeditplant.PlantDetailFragment"
        android:label="@string/add_new_plant"
        tools:layout="@layout/fragment_detailed_plant">
        <argument
            android:name="plantId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.goranatos.plantkeeper.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.goranatos.plantkeeper.ui.todo.TodoFragment"
        android:label="@string/to_do_list"
        tools:layout="@layout/fragment_todo">
        <action
            android:id="@+id/action_navigation_todo_to_plantAddAndInfo"
            app:destination="@id/plantAddAndInfo"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

</navigation>