<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHibernateGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:minWidth="@dimen/customMinWidth"
            android:id="@+id/hibernateGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:minHeight="?listPreferredItemHeightSmall"
            app:layout_constraintStart_toStartOf="@+id/switchWater"
            app:layout_constraintTop_toBottomOf="@+id/switchWater">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHibernateTitle"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/hibernate_mode_settings"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvHibernateDateStartFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/begin"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHibernateTitle" />

            <TextView
                android:id="@+id/tvHibernateDateStartFromVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/_01_10"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/accent"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_baseline_play_arrow_24"
                app:layout_constraintBottom_toBottomOf="@+id/tvHibernateDateStartFrom"
                app:layout_constraintStart_toEndOf="@+id/tvHibernateDateStartFrom"
                app:layout_constraintTop_toTopOf="@+id/tvHibernateDateStartFrom" />


            <TextView
                android:id="@+id/tvHibernateDateFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:text="@string/end"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHibernateDateStartFrom" />


            <TextView
                android:id="@+id/tvHibernateDateFinishVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_01_04"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textAlignment="center"
                android:textColor="@color/accent"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_baseline_pause_24"
                app:layout_constraintBottom_toBottomOf="@+id/tvHibernateDateFinish"
                app:layout_constraintStart_toStartOf="@+id/tvHibernateDateStartFromVal"
                app:layout_constraintTop_toTopOf="@+id/tvHibernateDateFinish" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_cancel"
                app:layout_constraintTop_toBottomOf="@+id/tvHibernateDateFinish" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="@+id/button_save"
                app:layout_constraintEnd_toStartOf="@+id/button_save"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_save" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>