<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fertilizeGroup"
        android:minWidth="@dimen/customMinWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="?listPreferredItemHeightSmall">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fertilizing_mode_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchHibernate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:drawableStart="@drawable/ic_baseline_ac_unit_24"
            android:gravity="center"
            android:text="@string/sp_hibernate_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


        <TextView
            android:id="@+id/tvToStartFertilizeFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/next_fertilization_date"
            android:textAlignment="center"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchHibernate" />

        <TextView
            android:id="@+id/tvToFertilizeFromDateVal"
            android:layout_width="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/_01_10"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:visibility="visible"
            app:drawableStartCompat="@drawable/ic_baseline_play_arrow_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvToStartFertilizeFrom"
            app:layout_constraintStart_toEndOf="@+id/tvToStartFertilizeFrom"
            app:layout_constraintTop_toTopOf="@+id/tvToStartFertilizeFrom" />


        <TextView
            android:id="@+id/tvToFertilizeOnceAt"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/to_fertilize_once_at_in_days"
            app:layout_constraintEnd_toStartOf="@+id/etLayoutFertilizingFrequencyNormal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvToStartFertilizeFrom" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_fertilize_normal_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textViewToFertilizeOnce, etLayoutFertilizingFrequencyNormal" />

        <TextView
            android:id="@+id/textViewToFertilizeOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/fertilizing_settings_normal_mode"
            app:layout_constraintBottom_toBottomOf="@+id/etLayoutFertilizingFrequencyNormal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etLayoutFertilizingFrequencyNormal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutFertilizingFrequencyNormal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textViewToFertilizeOnce"
            app:layout_constraintTop_toBottomOf="@+id/tvToFertilizeOnceAt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFertilizingFrequencyNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_fertilizing_in_hibernate_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textViewToFertilizeOnceHibernate, etLayoutFertilizingFrequencyInHibernate" />


        <TextView
            android:id="@+id/textViewToFertilizeOnceHibernate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:gravity="center"
            android:text="@string/fertilizing_settings_hibernate_mode"
            app:layout_constraintBottom_toBottomOf="@+id/etLayoutFertilizingFrequencyInHibernate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etLayoutFertilizingFrequencyInHibernate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutFertilizingFrequencyInHibernate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textViewToFertilizeOnceHibernate"
            app:layout_constraintTop_toBottomOf="@+id/etLayoutFertilizingFrequencyNormal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFertilizingFrequencyInHibernate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="3"
                android:maxLength="3"
                android:inputType="number"
                android:gravity="center"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLayoutFertilizingFrequencyInHibernate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toTopOf="@+id/button_cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>